--- a/BookingCare/NodeJS/.env
+++ b/BookingCare/NodeJS/.env
@@ -2,3 +2,5 @@ PORT=8080
 NODE_ENV=development
 URL_REACT=http://localhost:3000
 MAX_NUMBER_SCHEDELE=10
+EMAIL_APP_PASSWORD=gvvf pfll kyyc qvcl
+EMAIL_APP=minhdeptrai.09.2004@gmail.com
